# single-view-stereo

./: .gitignore  README.md  environment.yml  galvani_commands.md  pyproject.toml
output/blender/000/: 000_depth_left_0001.exr  000_meta.json
output/blender/001/: 001_depth_left_0001.exr  001_meta.json
src/: Text2StereoWithBaseline.ipynb  depth_warp_stereo.py  diffusion_stereo.py  gen_stereo.py  lora_training.py  main.py
src/galvani/: dataset.py  disparity.py  galvani_evaluation.py  galvani_inference.py  galvani_training.py  plots.py  sampler.py  sd-setup.md
src/galvani/StereoDiffusion/: README.md  depth2stereoimg.py  img2stereo.py  p2putil.py  stereoutils.py  txt2stereo.py  txt2stereoimg.ipynb
src/galvani/StereoDiffusion/DensePredictionTransformer/: version
src/galvani/StereoDiffusion/DensePredictionTransformer/dpt/: base_model.py
src/galvani/StereoDiffusion/PromptToPrompt/: version
src/galvani/StereoDiffusion/StableDiffusion/: version
src/galvani/StereoDiffusion/StableDiffusion/ldm/models/diffusion/: ddim.py
src/galvani/StereoDiffusion/StableDiffusion/ldm/modules/diffusionmodules/: openaimodel.py
src/galvani/stereo_diffusion/: version
