[project]
name = "single-view-stereo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy==2.2.6",
    "peft==0.17.1",
    "tqdm==4.67.1",
    "opencv-python==4.12.0.88",
    "diffusers==0.35.2",
    "transformers==4.57.1",
    "accelerate==1.11.0",
    "safetensors==0.6.2",
    "mathutils==3.3.0",
    "pandas==2.3.3"
]
